--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today Website</title>
     <link rel="stylesheet" href="style.css">
+    <!-- font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Montserrat:wght@200;400;500&family=Nunito:wght@400;500;600;800&family=Open+Sans&family=Poppins:ital,wght@0,200;0,300;0,500;1,200;1,300&display=swap" rel="stylesheet">
+    <!-- another font link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Lobster&family=Montserrat:wght@200;400;500&family=Nunito:wght@400;500;600;800&family=Open+Sans&family=Poppins:ital,wght@0,200;0,300;0,500;1,200;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- header section -->
@@ -70,5 +73,53 @@
             </div>
         </div>
     </section>
+    <!-- how to contribute -->
+    <section class="how-to-contribute container">
+        <div class="contribute">
+            <div>
+                <h2 class="title">They need us
+                    to suvive</h2>
+                    <p class="pera">Lorem ipsum dolor sit amet, usu cu esse possit
+                        referrentur, at eam falli deterruisset. No duo populo
+                        animal noluisse, enim <br><br>
+                        Lorem ipsum dolor sit amet, usu cu esse possit
+                        referrentur, at eam falli deterruisset.</p>
+                <a href="" class="btn">How to Contribute?</a>
+            </div>
+            <img src="images/donation7.jpg" alt="">
+        </div>
+
+        
+        <div class="contribute">
+            <img src="images/donation8.jpg" alt="">
+            <div>
+                <h2 class="title">Their lives depend on
+                    your donation</h2>
+                    <p class="pera">Lorem ipsum dolor sit amet, usu cu esse possit
+                        referrentur, at eam falli deterruisset. No duo populo
+                        animal noluisse, enim <br><br>
+                        Lorem ipsum dolor sit amet, usu cu esse possit
+                        referrentur, at eam falli deterruisset.</p>
+                <a href="" class="btn">How to Contribute?</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- updates -->
+
+    <section class="update container">
+        <h2 class="title">Get My Updates</h2>
+        <p class="pera">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>  deterruisset. No duo populo animal noluisse, enim</p>
+        <div class="update-input">
+                <input type="email" placeholder="Email : " required><span>subscribe</span>
+        </div>
+    </section>
+
+    <!-- footer -->
+
+    <footer>
+        <h4>Be Humble</h4>
+        <p>I’m gonna do it</p>
+    </footer>
 </body>
 </html>
