fixed some issue

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <div class="banner-details container">
                 <h2>Let’s Help Those Who Are <br>
                     More In Need</h2>
-                <p class="pera">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br>
-                    deterruisset. No duo populo animal noluisse, enim</p>
+                <p class="pera">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis similique labore quaerat iure aut non <br> repudiandae obcaecati dicta iusto quae, quidem dolor suscipit mollitia  <br> velit quia nemo deleniti maiores quisquam.</p>
                 <a href="" class="btn">Donate Now</a>
             </div>
         </div>
@@ -31,7 +30,7 @@
         <div class="amount">
             <ul>
                 <li>100TK</li>
-                <li>500TK</li>
+                <li class="active-ammount">500TK</li>
                 <li>1000TK</li>
                 <li>5000TK</li>
             </ul>
