--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- header section -->
     <header>
-        <div class="banner ">
+        <div class="banner">
             <div class="banner-details container">
                 <h2>Let’s Help Those Who Are <br>
                     More In Need</h2>
@@ -75,7 +75,7 @@
     </section>
     <!-- how to contribute -->
     <section class="how-to-contribute container">
-        <div class="contribute">
+        <div class="contribute contribute1">
             <div>
                 <h2 class="title">They need us
                     to suvive</h2>
